--- a/web/src/containers/CO2Prediction.module.css
+++ b/web/src/containers/CO2Prediction.module.css
@@ -10,3 +10,34 @@
     text-align: center;
     margin: var(--l-spacing) 0;
 }
+
+.github {
+    margin-left: var(--m-spacing);
+}
+
+.topBar {
+    float: right;
+}
+
+.topBar > * {
+    margin: 0 var(--m-spacing) !important;
+}
+
+.disclaimer {
+    font-style: italic;
+    font-size: small;
+}
+
+.container {
+    margin: var(--xxxl-spacing) 0;
+    height: 90vh;
+    display: flex !important;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.spacer {
+    flex: 1;
+}
+
