--- a/web/src/index.css
+++ b/web/src/index.css
@@ -1,4 +1,4 @@
-@import "~font-awesome/css/font-awesome.min.css";
+@import "~@fortawesome/fontawesome-free/css/all.min.css";
 
 @custom-media --phone (max-width: 1024px);
 
